--- a/membership-service/build.gradle
+++ b/membership-service/build.gradle
@@ -39,9 +39,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //    implementation 'org.jetbrains:annotaions:23.0.0'
     testImplementation 'junit:junit:4.13.1'
+
+    implementation 'mysql:mysql-connector-java'
 }
 
 test {
