--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,4 @@
 
-
-group 'org.mypay.common'
-
 repositories {
     mavenCentral()
 }
@@ -11,6 +8,10 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+}
+
+bootJar{
+    enabled = false
 }
 
 test {
