feat :: baking service

--- a/membership-service/build.gradle
+++ b/membership-service/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 }
 
 springBoot {
-    mainClassName = 'com.example.membership'
+    mainClassName = 'com.example.membership.MembershipApplication'
 }
 
 docker {
