feat :: money service

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'FastCampusPay'
 include 'membership-service'
 include 'common'
 include 'banking-service'
+include 'money-service'
+include 'money-service'
 
