--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -89,6 +89,7 @@ services:
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
       - KAFKA_CLUSTERS_BOOTSTRAPSERVERS=kafka:29092
       - LOGGING.TOPIC=fastcampus.logging.out.stdout
+      - SERVICE_MEMBERSHIP_URL=http://membership-service:8080
   money-service:
     image: fast-campus-pay-money:0.0.1-SNAPSHOT
     networks:
